few some layout issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,3 +81,7 @@ body * {
 .react-datalist{
 	max-height: 250px !important;
 }
+
+.center{
+	text-align: center;
+}
